--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,18 @@
 /*  your css code here. If applicable */
+ table {
+      border-collapse: collapse;
+      width: 100%;
+      background-color: yellow;
+	 border:1px solid black;
+    }
+
+
+    th, td {
+      border: 1px solid black;
+      padding: 10px;
+      text-align: center;
+    }
+
+    th {
+      background-color: #yellow;
+    }
